Bug 367991 - baloo_file pid 3625 aborted (6)
Summary: baloo_file pid 3625 aborted (6)
Status: RESOLVED FIXED
Alias: None
Product: frameworks-baloo
Classification: Frameworks and Libraries
Component: Engine (other bugs)
Version First Reported In: 5.18.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Pinak Ahuja
URL:
Keywords: drkonqi
: 358117 361299 362224 362855 366171 366296 366805 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-30 08:32 UTC by Luciano Mario
Modified: 2016-09-12 11:49 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luciano Mario 2016-08-30 08:32:23 UTC
Application: baloo_file (5.18.0)

Qt Version: 5.5.1
Operating System: Linux 4.4.0-36-generic x86_64
Distribution: Ubuntu 16.04.1 LTS

-- Information about the crash:
- What I was doing when the application crashed:
file traslate of directory. (spostamento di file da cartella a cartella. Scomparsa decorazione finestra..... !!!)

The crash can be reproduced every time.

-- Backtrace:
Application: Baloo File Indexing Daemon (baloo_file), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f359b3188c0 (LWP 3265))]

Thread 2 (Thread 0x7f345023c700 (LWP 4056)):
[KCrash Handler]
#6  0x00007f3599359418 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
#7  0x00007f359935b01a in __GI_abort () at abort.c:89
#8  0x00007f359939b72a in __libc_message (do_abort=do_abort@entry=2, fmt=fmt@entry=0x7f35994b46b0 "*** Error in `%s': %s: 0x%s ***\n") at ../sysdeps/posix/libc_fatal.c:175
#9  0x00007f35993a3f4a in malloc_printerr (ar_ptr=<optimized out>, ptr=<optimized out>, str=0x7f35994b4728 "free(): invalid next size (fast)", action=3) at malloc.c:5007
#10 _int_free (av=<optimized out>, p=<optimized out>, have_lock=0) at malloc.c:3868
#11 0x00007f35993a7abc in __GI___libc_free (mem=<optimized out>) at malloc.c:2969
#12 0x00007f3599e1ef31 in QArrayData::deallocate (data=<optimized out>, objectSize=objectSize@entry=8, alignment=alignment@entry=8) at tools/qarraydata.cpp:131
#13 0x00007f359a4eb47f in QTypedArrayData<unsigned long long>::deallocate (data=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qarraydata.h:222
#14 QVector<unsigned long long>::reallocData (this=this@entry=0x7f345023b840, asize=<optimized out>, aalloc=<optimized out>, options=..., options@entry=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qvector.h:570
#15 0x00007f359a4ea4cf in QVector<unsigned long long>::insert (t=<synthetic pointer>, n=1, before=<optimized out>, this=0x7f345023b840) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qvector.h:647
#16 QVector<unsigned long long>::insert (x=<synthetic pointer>, before=<optimized out>, this=0x7f345023b840) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qvector.h:198
#17 Baloo::DocumentUrlDB::add (this=this@entry=0x7f345023bb10, id=id@entry=92889482503653377, parentId=79942093136463873, name=...) at /build/baloo-kf5-wIK3t6/baloo-kf5-5.18.0/src/engine/documenturldb.cpp:124
#18 0x00007f359a4eaca0 in Baloo::DocumentUrlDB::put (this=this@entry=0x7f345023bb10, docId=docId@entry=79938962105305089, url=...) at /build/baloo-kf5-wIK3t6/baloo-kf5-5.18.0/src/engine/documenturldb.cpp:99
#19 0x00007f359a5020ea in Baloo::WriteTransaction::addDocument (this=0x7f34480011e0, doc=...) at /build/baloo-kf5-wIK3t6/baloo-kf5-5.18.0/src/engine/writetransaction.cpp:56
#20 0x00007f359a4fbfe9 in Baloo::Transaction::addDocument (this=this@entry=0x7f345023bbd0, doc=...) at /build/baloo-kf5-wIK3t6/baloo-kf5-5.18.0/src/engine/transaction.cpp:226
#21 0x000000000041cc86 in Baloo::NewFileIndexer::run (this=0x858d30) at /build/baloo-kf5-wIK3t6/baloo-kf5-5.18.0/src/file/newfileindexer.cpp:72
#22 0x00007f3599e1a343 in QThreadPoolThread::run (this=0x723270) at thread/qthreadpool.cpp:93
#23 0x00007f3599e1d84e in QThreadPrivate::start (arg=0x723270) at thread/qthread_unix.cpp:331
#24 0x00007f3598a816fa in start_thread (arg=0x7f345023c700) at pthread_create.c:333
#25 0x00007f359942ab5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f359b3188c0 (LWP 3265)):
#0  0x00007f359941a9cd in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f3596632740 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f35965eee84 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f35965ef340 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f35965ef4ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f359a054a9b in QEventDispatcherGlib::processEvents (this=0x706fe0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#6  0x00007f3599ffbdea in QEventLoop::exec (this=this@entry=0x7fff3d3283f0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#7  0x00007f359a003e8c in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1229
#8  0x000000000041698c in main (argc=1, argv=<optimized out>) at /build/baloo-kf5-wIK3t6/baloo-kf5-5.18.0/src/file/main.cpp:88

Possible duplicates by query: bug 354339.

Reported using DrKonqi
Comment 1 Christoph Cullmann 2016-09-11 20:27:56 UTC
https://git.reviewboard.kde.org/r/128893/
Comment 2 Christoph Cullmann 2016-09-11 20:40:41 UTC
Git commit 6e5b41e88d92c90df8e54d99163cea08f17d0554 by Christoph Cullmann.
Committed on 11/09/2016 at 20:37.
Pushed by cullmann into branch 'master'.

Fix sorted insert (aka flat_map like insert).

REVIEW: 128893

unit test covers more cases, in any case: should not corrupt your memory ;=)

M  +47   -0    autotests/unit/engine/documenturldbtest.cpp
M  +2    -12   src/engine/documenturldb.cpp
M  +27   -0    src/engine/idutils.h
M  +5    -29   src/engine/writetransaction.cpp

http://commits.kde.org/baloo/6e5b41e88d92c90df8e54d99163cea08f17d0554
Comment 3 Christoph Cullmann 2016-09-11 21:02:19 UTC
*** Bug 355924 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Cullmann 2016-09-11 21:04:20 UTC
*** Bug 366171 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Cullmann 2016-09-11 21:06:58 UTC
*** Bug 358117 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Cullmann 2016-09-11 21:20:46 UTC
*** Bug 366296 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Cullmann 2016-09-11 21:23:59 UTC
*** Bug 362224 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Cullmann 2016-09-11 21:24:14 UTC
*** Bug 362855 has been marked as a duplicate of this bug. ***
Comment 9 Christoph Cullmann 2016-09-11 21:25:26 UTC
*** Bug 366805 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Cullmann 2016-09-12 11:49:41 UTC
*** Bug 361299 has been marked as a duplicate of this bug. ***