Fix sorted insert (aka flat_map like insert).

REVIEW: 128893
BUG: 367991

unit test covers more cases, in any case: should not corrupt your memory ;=)